# detect-defective-green-coffee-beans

./: README.md  compose.yml  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml
backend/api/: Autoencoder_back.pt  config.py  constants.py  main.py  net.py  ssd_predictor.py  threshold.json  validate.py
backend/api/events/: startup.py
backend/api/routers/: ssd.py
backend/core/: config.py
backend/services/ssd/: constants.py  net.py  ssd_predictor.py
backend/tests/: test_main.py
frontend/: Dockerfile
frontend/app/: index.html  package-lock.json
frontend/app/src/: App.css  App.tsx  ErrorMessage.tsx  FreeUploadImage.tsx  HowToUseContent.tsx  PredictionDescription.tsx  PredictionResult.tsx  PredictionSample.tsx  PredictionTarget.tsx  PredictionTargetEmpty.tsx  PredictionTargetPreview.tsx  TopContent.tsx  TopMenu.tsx  UploadImage.tsx  index.css
frontend/app/src/hooks/: PredictImage.ts  useUpload.ts
