[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
python-multipart = "^0.0.9"
pillow = "^10.4.0"
torch = { version = "2.4.1+cpu", source = "pytorch" }
torchvision = { version = "0.19.1+cpu", source = "pytorch" }
pytorch-lightning = "^2.4.0"
matplotlib = "^3.9.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
